fix checks